--- a/demos/pages-dialog/dialog-success.html
+++ b/demos/pages-dialog/dialog-success.html
@@ -11,7 +11,7 @@
 	<script src="../_assets/js/"></script>
 	<script src="../../js/"></script>
     <style>
-		.ui-dialog.dialog-actionsheet .ui-dialog-contain {
+		.ui-page-dialog.dialog-actionsheet .ui-page-dialog-contain {
 			margin-top: 0;
 		}
 	</style>
