Textinput: Implement classes option
Fixes gh-7730

--- a/tests/integration/filterable/index.html
+++ b/tests/integration/filterable/index.html
@@ -64,7 +64,7 @@
 			margin: -.3125em;
 			border-bottom-width: 0;
 		}
-		.ui-filterable .ui-input-search {
+		.ui-filterable .ui-textinput-search {
 			margin: .3125em;
 			width: auto;
 			display: block;
